# resmico

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  README.md  conda_env.yaml  convert_pickle.py  convert_pickles_to_hdf.sh  deepmased_gpu.yml  deepmased_lib.txt  environment.yml  pyproject.toml  resmico_env.txt  resmico_lib.txt  setup.py
.github/workflows/: python-publish.yaml  pythonpackage.yml
DeepMAsED/: Evaluate.py  Models.py  Models_FL.py  Predict.py  Preprocess.py  Train.py  Train_BigD.py  Utils.py  __main__.py
DeepMAsED-SM/: Snakefile  config.yaml  config_test.yaml  snakemake_sge.sh
DeepMAsED-SM/feature_extractor/: README.md  bam2feat.cpp  contig_stats.cpp  contig_stats.hpp
DeepMAsED-SM/feature_extractor/tests/: test_contig_stats.cpp  test_util.cpp
DeepMAsED-SM/feature_extractor/util/: logger.cpp  util.cpp  util.hpp
DeepMAsED-SM/tests/data/: Samp2-MAG3.tsv
DeepMAsED/Commands/: Evaluate.py  Predict.py  Preprocess.py  Train.py
ResMiCo/: CMakeLists.txt  ContigReader.py  Evaluate.py  Models_FL.py  Predict.py  Preprocess.py  Preprocess2.py  Reader.cpp  Reader.html  Reader.pyx  Train.py  TrainBinData.py  Train_BigD.py  Utils.py  __init__.py  __main__.py  contig_reader.cpp  contig_reader.hpp  setup.py  train.sh
ResMiCo-SM/: README.md  Snakefile  config.yaml  config_eth.yaml  snakemake_lsf.sh
ResMiCo-SM/feature_extractor/: .clang-format  CMakeLists.txt  README.md  bam2feat.cpp  contig_stats.cpp  contig_stats.hpp  metaquast_parser.cpp  metaquast_parser.hpp  stats_writer.cpp  stats_writer.hpp
ResMiCo-SM/feature_extractor/tests/: test_bam2feat.cpp  test_contig_stats.cpp  test_fasta_reader.cpp  test_metaquast_parser.cpp  test_stats_writer.cpp  test_util.cpp
ResMiCo-SM/feature_extractor/tests/data/: hard_clipping.bam.bai  hard_clipping.sam  insert_at_end.bam  insert_at_end.sam  metaQUAST.mis_contigs.info  metaQUAST.mis_contigs2.info  soft_clipping.bam  soft_clipping.bam.bai  soft_clipping.sam  test.fa  test.fa.fai  test.mis_contigs.info  test1.bam  test1.bam.bai  test1.sam  test2.bam  test2.bam.bai  test2.sam  two_breakpoints.mis_contigs.info
ResMiCo-SM/feature_extractor/util/: duration.hpp  fasta_reader.hpp  filesystem.hpp  gzstream.cpp  gzstream.hpp  iclock.hpp  instant.cpp  instant.hpp  kseq.h  logger.hpp  system_clock.cpp  system_clock.hpp  util.cpp  util.hpp  wait_queue.hpp
ResMiCo-SM/tests/data/: Samp3-MAG2.tsv  (+3 more)
ResMiCo/Commands/: Evaluate.py  Predict.py  Preprocess.py  Train.py
ResMiCo/tests/: test_Predict.py
ResMiCo/tests/data/preprocess/: toc  toc_chunked
model/: stats_cov.json
notebooks/: long_contigs_opt.ipynb  paper_charts.ipynb
notebooks/01_resmico-sm/: README.md
notebooks/06_version2/: misc.ipynb
notebooks/figures/: auroc.ipynb  breakpoint.ipynb  cami.ipynb  coverage.ipynb  family.ipynb  kmers.ipynb  shap.ipynb  umap.ipynb
resmico/: ContigReader.py  Evaluate.py  Models_FL.py  Predict.py  Preprocess.py  Reader.pyx  TrainBinData.py  Train_BigD.py  Utils.py  __init__.py  __main__.py  add_stats.py  bam2feat  bam2feat.py  contig_reader.cpp  contig_reader.hpp  contig_reader.py  evaluate.py  evaluate.sh  features_binarytoc_new  filter_contigs.py  models_fl.py  predict.py  preprocess.py  reader.html  reader.pyx  setup.py  train.sh  train_big_data.py  train_binary_data.py  utils.py
resmico/Commands/: Evaluate.py  Predict.py  Preprocess.py  Train.py  __init__.py
resmico/commands/: arguments.py  bam2feat.py  evaluate.py  filter_contigs.py  predict.py  preprocess.py  train.py
resmico/model/: fl_all_model.h5  stats_cov.json
resmico/tests/: test_ContigReader.py  test_Evaluate.py  test_Models_FL.py  test_Predict.py  test_Train.py  test_bam2feat.py  test_contig_reader.py  test_evaluate.py  test_filter.py  test_models_fl.py  test_train.py
tests/: test_ContigReader.py  test_Evaluate.py  test_Models.py  test_Models_FL.py  test_Predict.py  test_Preprocess2.py  test_Train.py
(+125 files in other folders)
