[tool.poetry]
name = "resmico"
version = "1.2.1"
description = "Resmico - contig misassembly detection"
authors = ["Daniel Danciu <daniel@danciu.ro>"]

[tool.poetry.dependencies]
pip="^22.3"
python="~3.8"
cmake="^3.24"
cython="^0.29"
keras="^2.8"
pandas="^1.4"
pathos="^0.2"
tables="^3.7"
scikit-learn="1.1.1"
snakemake="5.31.1"
tensorflow="^2.8"
tensorboard="^2.8"
protobuf="^3.20"
toolz="^0.11"
xsamtools="^0.6"
pysam="^0.19"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipython="^8.5"

[build-system]
requires = ["setuptools", "wheel", "numpy>=1.19.0", "Cython>=0.29.21"]
build-backend = "setuptools.build_meta"
